Moves notebook into src directory

--- a/src/notebook.ipynb
+++ b/src/notebook.ipynb
@@ -4,22 +4,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## MIDS-W207 Final Project\n",
-    "### Multispecies Leaf Disease Classification\n",
-    "### Eshwaran Venkat & Tigran Poladian\n",
+    "# Multispecies Leaf Disease Classification 🍃 \n",
+    "![Python version](https://img.shields.io/badge/python-v3.10-green)\n",
     "\n",
-    "Dataset from Kaggle.com : https://www.kaggle.com/datasets/csafrit2/plant-leaves-for-image-classification"
+    "View Dataset\n",
+    "\n",
+    "[![View Kaggle Dataset](https://img.shields.io/badge/Kaggle-20BEFF.svg?style=for-the-badge&logo=Kaggle&logoColor=white)](https://www.kaggle.com/datasets/csafrit2/plant-leaves-for-image-classification)\n",
+    "\n",
+    "Language & Environments\n",
+    "    \n",
+    "![Python version](https://img.shields.io/badge/Python-3776AB.svg?style=for-the-badge&logo=Python&logoColor=white)\n",
+    "![Anaconda](https://img.shields.io/badge/Anaconda-44A833.svg?style=for-the-badge&logo=Anaconda&logoColor=white)\n",
+    "![Jupyter](https://img.shields.io/badge/Jupyter-F37626.svg?style=for-the-badge&logo=Jupyter&logoColor=white)\n",
+    "    \n",
+    "Packages\n",
+    "\n",
+    "![Pandas](https://img.shields.io/badge/pandas-%23150458.svg?style=for-the-badge&logo=pandas&logoColor=white)\n",
+    "![Numpy](https://img.shields.io/badge/NumPy-013243.svg?style=for-the-badge&logo=NumPy&logoColor=white)\n",
+    "![Tensorflow](https://img.shields.io/badge/TensorFlow-FF6F00.svg?style=for-the-badge&logo=TensorFlow&logoColor=white)\n",
+    "![Keras](https://img.shields.io/badge/Keras-D00000.svg?style=for-the-badge&logo=Keras&logoColor=white)\n",
+    "\n",
+    "**Authors**\n",
+    "\n",
+    "[Eshwaran Venkat](mailto:eshwaran@ischool.berkeley.edu) & [Tigran Poladian](mailto:tpoladian@ischool.berkeley.edu) under [Uri Schonfeld](mailto:shuri@ischool.berkeley.edu)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Objective\n",
-    "The objective of this machine learning project is to train a model to identify diseased from healthy tree leaves. Initial model will perform a binary healthy / diseased classifier. Follow-on models will add categorical information to identify the species as well as health of the leaves.\n",
+    "## Objective 🎯\n",
+    "Train a machine learning model to identify diseased from healthy tree leaves. Initial model will perform a binary healthy / diseased classifier. Follow-on models will add categorical information to identify the species as well as health of the leaves.\n",
     "\n",
-    "### Introduction\n",
-    "The dataset from Kaggle.com contains images of leaves from 11 species of trees such as lemon, mango, and pomegranite. Total of 4503 jpeg image files at 6k X 4k RGB pixel resolution of which 2278 are of healthy leaves and 2225 of diseased leaves. The dataset comes decomposed into Training, Testing, Validation, and Prediction images, therefore our EDA and model building will not further segregate data into training and other sets. \n",
+    "## Introduction 📋\n",
+    "* The dataset from Kaggle.com contains images of leaves from 11 species of trees such as `lemon`, `mango`, and `pomegranite`. \n",
+    "* A total of `4503` jpeg image files at `6k X 4k RGB pixel resolution`\n",
+    "* `2278` healthy leaves and `2225` diseased leaves. \n",
+    "* The dataset comes decomposed into training, testing, validation, and prediction images, therefore our EDA and model building will not further segregate data into training and other sets. \n",
     "\n",
     "The test and training labels are determined by the placement folder for each image file. For example, an image file stored in the folder \"Guava diseased\" is considered to have binary label = 1 to indicate a diseased leaf image. Based on this file folder location structure, our model will generate a binary label array."
    ]
@@ -32,13 +53,6 @@
    },
    "outputs": [],
    "source": [
-    "# ****************************************************************\n",
-    "# MIDS-W207 Final Project: Multispecies Leaf disease dataset from kaggle\n",
-    "\n",
-    "# from kaggle: \n",
-    "# https://www.kaggle.com/datasets/csafrit2/plant-leaves-for-image-classification\n",
-    "# \n",
-    "# ***************************************************************\n",
     "import random\n",
     "import pandas as pd\n",
     "import tensorflow as tf\n",
@@ -420,7 +434,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
