--- a/src/notebook.ipynb
+++ b/src/notebook.ipynb
@@ -46,24 +46,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Preprocessing & EDA 🔭"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "id": "uAEAoFST8NRy"
    },
    "outputs": [],
    "source": [
-    "import random\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.image as img\n",
+    "%matplotlib inline\n",
+    "\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
     "from keras import metrics\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib.image as img\n",
     "from PIL import Image\n",
     "import cv2\n",
-    "import os"
+    "\n",
+    "import os\n",
+    "import random"
    ]
   },
   {
@@ -420,9 +431,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "project_207",
    "language": "python",
-   "name": "python3"
+   "name": "project_207"
   },
   "language_info": {
    "codemirror_mode": {
@@ -434,7 +445,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
