style (src): Formats notebooks

--- a/leafydex/utils/compress.ipynb
+++ b/leafydex/utils/compress.ipynb
@@ -52,15 +52,14 @@
    ],
    "source": [
     "import os\n",
-    "import sys\n",
     "import pathlib\n",
     "import shutil\n",
-    "\n",
-    "from PIL import Image\n",
-    "\n",
+    "import sys\n",
     "from concurrent.futures import ThreadPoolExecutor\n",
     "\n",
+    "from PIL import Image\n",
     "from tqdm.autonotebook import tqdm\n",
+    "\n",
     "tqdm.pandas()"
    ]
   },
@@ -84,7 +83,7 @@
     "COMPRESS_SIZE: tuple[int, int] = (200, 200)\n",
     "\n",
     "# store the filepath address of the current file\n",
-    "__file__: str = os.path.abspath('')\n",
+    "__file__: str = os.path.abspath(\"\")\n",
     "\n",
     "ROOT_DIR_PATH: str = os.path.join(pathlib.Path(__file__).parent.parent)\n",
     "HD_IMG_DIR_PATH: str = os.path.join(ROOT_DIR_PATH, \"data\", HD_IMG_DIR)\n",
@@ -132,22 +131,22 @@
     "\n",
     "# do a depth-first-search based walk through the directory tree\n",
     "for path, directories, files in os.walk(HD_IMG_DIR_PATH):\n",
-    "    \n",
+    "\n",
     "    # if leaf nodes are detected\n",
     "    if files:\n",
-    "        \n",
+    "\n",
     "        # iterate through each file\n",
     "        for img_file in files:\n",
-    "            \n",
+    "\n",
     "            # get hd and compressed file paths\n",
     "            hd_file_abs_path: str = os.path.join(path, img_file)\n",
     "            cmp_file_abs_path: str = hd_file_abs_path.replace(HD_IMG_DIR, CMP_IMG_DIR)\n",
-    "            \n",
+    "\n",
     "            # create directory path\n",
     "            cmp_folder_abs_path: str = os.path.dirname(cmp_file_abs_path)\n",
     "            # create compressed subdirectory (idempotent)\n",
     "            os.makedirs(cmp_folder_abs_path, exist_ok=True)\n",
-    "            \n",
+    "\n",
     "            # add hd to compressed file mapping\n",
     "            image_compress_map[hd_file_abs_path] = cmp_file_abs_path"
    ]
@@ -176,7 +175,9 @@
    ],
    "source": [
     "# create a tuple version of image compress mapping dictionary for function argument passing\n",
-    "image_compress_map_tuples: list[tuple[str, str]] = [(k,v) for k,v in image_compress_map.items()]\n",
+    "image_compress_map_tuples: list[tuple[str, str]] = [\n",
+    "    (k, v) for k, v in image_compress_map.items()\n",
+    "]\n",
     "\n",
     "# create a progress bar to track progress across threads\n",
     "progress_bar = tqdm(total=len(image_compress_map.keys()), position=0, leave=True)\n",
@@ -185,14 +186,14 @@
     "def compress_image(source_path: str, destination_path: str):\n",
     "    hd_img: Image.Image = Image.open(source_path)\n",
     "    cmp_img: Image.Image = hd_img.resize(COMPRESS_SIZE)\n",
-    "    cmp_img.save(destination_path, 'JPEG', quality=100)\n",
+    "    cmp_img.save(destination_path, \"JPEG\", quality=100)\n",
     "    progress_bar.update(1)\n",
+    "\n",
     "\n",
     "# concurrently compress multiple images and save them\n",
     "with ThreadPoolExecutor(max_workers=10) as executor:\n",
     "    executor.map(\n",
-    "        lambda path_tuple: compress_image(*path_tuple), \n",
-    "        image_compress_map_tuples\n",
+    "        lambda path_tuple: compress_image(*path_tuple), image_compress_map_tuples\n",
     "    )"
    ]
   },
