--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -48,17 +48,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
-    "from matplotlib import pyplot as plt\n",
-    "import pandas as pd\n",
     "import os\n",
-    "import numpy as np\n",
-    "import seaborn as sns\n",
-    "from pyprojroot import here\n",
-    "from PIL import Image\n",
-    "import inflection\n",
+    "\n",
     "import cv2\n",
+    "import inflection\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "from matplotlib import pyplot as plt\n",
+    "from PIL import Image\n",
+    "from pyprojroot import here\n",
     "from tqdm import tqdm\n",
+    "\n",
+    "%matplotlib inline\n",
+    "\n",
     "sns.set_theme()"
    ]
   },
@@ -107,7 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir: str = os.path.join(here(), 'data', 'raw', 'Plants_2_compressed')"
+    "data_dir: str = os.path.join(here(), \"data\", \"raw\", \"Plants_2_compressed\")"
    ]
   },
   {
@@ -147,8 +150,8 @@
     "        for img_file in files:\n",
     "            # get hd and compressed file paths\n",
     "            cmp_file_abs_path: str = os.path.join(path, img_file)\n",
-    "            path_parts: list[str] = cmp_file_abs_path.split('/')\n",
-    "            \n",
+    "            path_parts: list[str] = cmp_file_abs_path.split(\"/\")\n",
+    "\n",
     "            data_type: str = path_parts[-3]\n",
     "            species: str = path_parts[-2]\n",
     "            img_name: str = path_parts[-1]\n",
@@ -276,22 +279,29 @@
    ],
    "source": [
     "df: pd.DataFrame = pd.DataFrame(\n",
-    "    data=image_list, columns=['data_type', 'name', 'file', 'path']\n",
+    "    data=image_list, columns=[\"data_type\", \"name\", \"file\", \"path\"]\n",
     ")\n",
     "\n",
     "# assign diseased tag based on name\n",
-    "df['diseased'] = df['name'].apply(lambda cell: True if \"diseased\" in cell else False)\n",
+    "df[\"diseased\"] = df[\"name\"].apply(lambda cell: True if \"diseased\" in cell else False)\n",
     "\n",
     "# assign species code based on value within paranthesis\n",
-    "df['species_code'] = df['name'].apply(lambda cell: cell.split(\"(\")[-1].replace(\")\",\"\").strip())\n",
-    "\n",
-    "# define species name by removing tokens and paranthesized characters\n",
-    "df['species_name'] = df['name'].apply(\n",
-    "    lambda cell: cell.replace(\"diseased\", \"\").replace(\"healthy\", \"\").split(\"(\")[0].strip()\n",
+    "df[\"species_code\"] = df[\"name\"].apply(\n",
+    "    lambda cell: cell.split(\"(\")[-1].replace(\")\", \"\").strip()\n",
     ")\n",
     "\n",
-    "#remove false name directory of images\n",
-    "df = df[~df['name'].isin(['images to predict', '.ipynb_checkpoints']).reset_index(drop=True)]\n",
+    "# define species name by removing tokens and paranthesized characters\n",
+    "df[\"species_name\"] = df[\"name\"].apply(\n",
+    "    lambda cell: cell.replace(\"diseased\", \"\")\n",
+    "    .replace(\"healthy\", \"\")\n",
+    "    .split(\"(\")[0]\n",
+    "    .strip()\n",
+    ")\n",
+    "\n",
+    "# remove false name directory of images\n",
+    "df = df[\n",
+    "    ~df[\"name\"].isin([\"images to predict\", \".ipynb_checkpoints\"]).reset_index(drop=True)\n",
+    "]\n",
     "df.sample(5)"
    ]
   },
@@ -407,7 +417,7 @@
     }
    ],
    "source": [
-    "df.describe().transpose().drop(columns=['top'])"
+    "df.describe().transpose().drop(columns=[\"top\"])"
    ]
   },
   {
@@ -438,14 +448,14 @@
     }
    ],
    "source": [
-    "df.groupby(['data_type']).size().plot(\n",
-    "    kind='pie', \n",
-    "    legend=True, \n",
-    "    title=\"Share of Dataset\", \n",
+    "df.groupby([\"data_type\"]).size().plot(\n",
+    "    kind=\"pie\",\n",
+    "    legend=True,\n",
+    "    title=\"Share of Dataset\",\n",
     "    colors=[\"indigo\", \"blue\", \"orange\"],\n",
-    "    autopct='%1.2f%%', \n",
-    "    figsize=(10, 6), \n",
-    "    labeldistance=None\n",
+    "    autopct=\"%1.2f%%\",\n",
+    "    figsize=(10, 6),\n",
+    "    labeldistance=None,\n",
     ");"
    ]
   },
@@ -477,14 +487,14 @@
     }
    ],
    "source": [
-    "df.groupby(['diseased']).size().plot(\n",
-    "    kind='pie', \n",
-    "    legend=True, \n",
+    "df.groupby([\"diseased\"]).size().plot(\n",
+    "    kind=\"pie\",\n",
+    "    legend=True,\n",
     "    title=\"Diseased Share of all images\",\n",
-    "    colors=['green', 'red'],\n",
-    "    autopct='%1.2f%%', \n",
-    "    figsize=(10, 6), \n",
-    "    labeldistance=None\n",
+    "    colors=[\"green\", \"red\"],\n",
+    "    autopct=\"%1.2f%%\",\n",
+    "    figsize=(10, 6),\n",
+    "    labeldistance=None,\n",
     ");"
    ]
   },
@@ -517,14 +527,14 @@
     }
    ],
    "source": [
-    "df.groupby(['species_name', 'diseased']).size().unstack().plot(\n",
-    "    kind='bar', \n",
-    "    stacked=True, \n",
-    "    title=\"Share of species (diseased+healthy) images\", \n",
-    "    figsize=(15,3), \n",
-    "    color=['green', 'red'],\n",
-    "    legend=True\n",
-    ").legend(loc='best');"
+    "df.groupby([\"species_name\", \"diseased\"]).size().unstack().plot(\n",
+    "    kind=\"bar\",\n",
+    "    stacked=True,\n",
+    "    title=\"Share of species (diseased+healthy) images\",\n",
+    "    figsize=(15, 3),\n",
+    "    color=[\"green\", \"red\"],\n",
+    "    legend=True,\n",
+    ").legend(loc=\"best\");"
    ]
   },
   {
@@ -566,30 +576,32 @@
    "outputs": [],
    "source": [
     "def plot_images_from_metadataframe(\n",
-    "    df: pd.DataFrame, \n",
-    "    path_col: str, \n",
-    "    subplot_rows: int, \n",
-    "    subplot_cols: int, \n",
-    "    title_cols: list[str]=None, \n",
-    "    figsize=(30,9)\n",
+    "    df: pd.DataFrame,\n",
+    "    path_col: str,\n",
+    "    subplot_rows: int,\n",
+    "    subplot_cols: int,\n",
+    "    title_cols: list[str] = None,\n",
+    "    figsize=(30, 9),\n",
     "):\n",
     "    if subplot_rows * subplot_cols != len(df):\n",
     "        raise ValueError(\"Subplot matrix does not match size of dataframe\")\n",
-    "    \n",
+    "\n",
     "    if path_col not in df.columns:\n",
     "        raise ValueError(\"Path column not found in dataframe\")\n",
-    "        \n",
+    "\n",
     "    fig = plt.figure(figsize=figsize)\n",
-    "    \n",
+    "\n",
     "    for indx, row in df.iterrows():\n",
     "        img: Image.Image = Image.open(row.loc[path_col])\n",
-    "        fig.add_subplot(subplot_rows, subplot_cols, indx+1)\n",
+    "        fig.add_subplot(subplot_rows, subplot_cols, indx + 1)\n",
     "        plt.imshow(img)\n",
-    "        plt.axis('off')\n",
+    "        plt.axis(\"off\")\n",
     "        if title_cols:\n",
-    "            title_str: str = \", \".join([f\"{inflection.humanize(c)}: {row.loc[c]}\" for c in title_cols])\n",
+    "            title_str: str = \", \".join(\n",
+    "                [f\"{inflection.humanize(c)}: {row.loc[c]}\" for c in title_cols]\n",
+    "            )\n",
     "            plt.title(title_str)\n",
-    "        \n",
+    "\n",
     "    plt.show()"
    ]
   },
@@ -705,7 +717,9 @@
    ],
    "source": [
     "# get one sample from each species\n",
-    "sample_species_df: pd.DataFrame = df.groupby('species_name').apply(lambda x: x.sample()).reset_index(drop=True)\n",
+    "sample_species_df: pd.DataFrame = (\n",
+    "    df.groupby(\"species_name\").apply(lambda x: x.sample()).reset_index(drop=True)\n",
+    ")\n",
     "print(sample_species_df.shape)\n",
     "sample_species_df.head(3)"
    ]
@@ -729,11 +743,11 @@
    ],
    "source": [
     "plot_images_from_metadataframe(\n",
-    "    df=sample_species_df, \n",
-    "    path_col=\"path\", \n",
-    "    subplot_rows=2, \n",
+    "    df=sample_species_df,\n",
+    "    path_col=\"path\",\n",
+    "    subplot_rows=2,\n",
     "    subplot_cols=6,\n",
-    "    title_cols=['species_name', 'diseased']\n",
+    "    title_cols=[\"species_name\", \"diseased\"],\n",
     ")"
    ]
   },
@@ -861,7 +875,9 @@
    ],
    "source": [
     "# get one sample from each species\n",
-    "sample_all_df: pd.DataFrame = df.groupby('name').apply(lambda x: x.sample()).reset_index(drop=True)\n",
+    "sample_all_df: pd.DataFrame = (\n",
+    "    df.groupby(\"name\").apply(lambda x: x.sample()).reset_index(drop=True)\n",
+    ")\n",
     "print(sample_all_df.shape)\n",
     "sample_all_df.head(3)"
    ]
@@ -885,12 +901,12 @@
    ],
    "source": [
     "plot_images_from_metadataframe(\n",
-    "    df=sample_all_df, \n",
-    "    path_col=\"path\", \n",
-    "    subplot_rows=11, \n",
+    "    df=sample_all_df,\n",
+    "    path_col=\"path\",\n",
+    "    subplot_rows=11,\n",
     "    subplot_cols=2,\n",
-    "    title_cols=['species_name', 'diseased'],\n",
-    "    figsize=(13,30)\n",
+    "    title_cols=[\"species_name\", \"diseased\"],\n",
+    "    figsize=(13, 30),\n",
     ")"
    ]
   },
