--- a/notebooks/baseline_cnn_all_trees.ipynb
+++ b/notebooks/baseline_cnn_all_trees.ipynb
@@ -1071,14 +1071,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "110\n"
+     "ename": "NameError",
+     "evalue": "name 'model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [18]\u001b[0m, in \u001b[0;36m<cell line: 10>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      6\u001b[0m (XT, YT) \u001b[38;5;241m=\u001b[39m utils\u001b[38;5;241m.\u001b[39mshuffle(XT, YT)\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m#print(len(XT))\u001b[39;00m\n\u001b[1;32m---> 10\u001b[0m test_results \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[38;5;241m.\u001b[39mevaluate(x\u001b[38;5;241m=\u001b[39mXT, y\u001b[38;5;241m=\u001b[39mYT)\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mTest Acc. \u001b[39m\u001b[38;5;132;01m{:.2f}\u001b[39;00m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mformat(test_results[\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m100\u001b[39m))\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'model' is not defined"
      ]
     }
    ],
@@ -1089,11 +1093,8 @@
     "YT = np.array(Y_test)\n",
     "\n",
     "(XT, YT) = utils.shuffle(XT, YT)\n",
-    "\n",
-    "print(len(XT))\n",
-    "\n",
-    "#test_results = model.evaluate(x=XT, y=YT)\n",
-    "#print('\\nTest Acc. {:.2f}%'.format(test_results[1]*100))\n",
+    "test_results = model.evaluate(x=XT, y=YT)\n",
+    "print('\\nTest Acc. {:.2f}%'.format(test_results[1]*100))\n",
     "\n",
     "#test_results = model.evaluate(x=X_test, y=Y_test)\n",
     "\n",
